<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".ActivarActivity" >

    <View
        android:id="@+id/anchor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <EditText
        android:id="@+id/campoEmailA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/anchor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-200dp"
        android:ems="10"
        android:hint="@string/campo_email_a"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/campoContrasenaA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/campoEmailA"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/campo_contrasena_a"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/campoRepetirContrasenaA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/campoContrasenaA"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/campo_repetir_contrasena_a"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/botonActivarA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/campoRepetirContrasenaA"
        android:layout_alignRight="@+id/campoRepetirContrasenaA"
        android:layout_below="@+id/campoRepetirContrasenaA"
        android:layout_marginTop="20dp"
        android:background="@drawable/defaultbutton"
        android:textColor="#eeeeeeff"
        android:text="@string/boton_activar_a" />

</RelativeLayout>