<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".MapaActivity" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="150dp" />

    <TextView
        android:id="@+id/textoCompartirM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/map"
        android:layout_marginTop="-140dp"
        android:layout_centerHorizontal="true"
        android:text="@string/texto_compartir_m" />

    <Button
        android:id="@+id/botonCompartirGmailM"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textoCompartirM"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/defaultbutton"
        android:textColor="#eeeeeeff"
        android:text="@string/boton_compartir_gmail_m" />

    <Button
        android:id="@+id/botonCompartirTwitterM"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botonCompartirGmailM"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/defaultbutton"
        android:textColor="#eeeeeeff"
        android:text="@string/boton_compartir_twitter_m" />

</RelativeLayout>
